--- a/main.html
+++ b/main.html
@@ -3,6 +3,18 @@
     <title>Facebook Login</title>
   </head>
   <body>
-    <!-- Write your code here -->
+    <div id="left" class="box">
+		<img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
+		<p>Facebook helps you connect and share with the people in your life.</p>
+	</div>
+	<div id="right" class="box">
+		<form>
+			<input type="text" id="email" placeholder="Email address or phone number">
+			<input type="password" id="password" placeholder="Password">
+			<button id="login" type="submit">Log in</button>
+			<a href="#">Forgotten account?</a>
+		</form>
+		<button type="submit" class="signup">Create new account</button>
+	</div>
   </body>
 </html>
