--- a/main.html
+++ b/main.html
@@ -1,13 +1,14 @@
 <html>
   <head>
     <title>Facebook Login</title>
+	<link rel="stylesheet" type="text/css" href="mystyles.css">
   </head>
   <body>
-    <div id="left" class="box">
+    <div class="left">
 		<img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
 		<p>Facebook helps you connect and share with the people in your life.</p>
 	</div>
-	<div id="right" class="box">
+	<div class="right">
 		<form>
 			<input type="text" id="email" placeholder="Email address or phone number">
 			<input type="password" id="password" placeholder="Password">
